<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:title="@string/app_features">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_HTML"
                    android:title="@string/menu_HTML" />
                <item
                    android:id="@+id/nav_python"
                    android:title="@string/menu_python" />
                <item
                    android:id="@+id/nav_Javascript"
                    android:title="@string/menu_javascript" />

            </menu>
        </item>
    </group>
</menu>